--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -18,10 +18,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@jsketch-cli/local-client": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "http-proxy-middleware": "^3.0.3",
-    "@jsketch-cli/local-client": "^0.1.0"
+    "http-proxy-middleware": "^3.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
