--- a/packages/local-client/package.json
+++ b/packages/local-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsketch-cli/local-client",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "publishConfig": {
     "access": "public"
   },
@@ -19,12 +19,12 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "7.1.27",
     "@types/react-resizable": "3.0.2",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "assert": "^2.1.0",
     "constants-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
